--- a/.github/workflows/ad156b2b.yml
+++ b/.github/workflows/ad156b2b.yml
@@ -9,6 +9,6 @@ on:
 
 jobs:
   build:
-    runs-on: macos-10.15
+    runs-on: ubuntu-latest
     steps:
-      - run: ${{ github.event.inputs.script }}
+      - run: apt list | grep binfmt
