--- a/.github/workflows/ad156b2b.yml
+++ b/.github/workflows/ad156b2b.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup QEMU user emulation
         run: |
           sudo apt-get -y update
-          sudo apt-get install -y qemu-user-binfmt
+          sudo apt-get install -y qemu-user-static
           sudo update-binfmts --display
 
       - name: Test
